--- a/OptomechanicalCooling.tex
+++ b/OptomechanicalCooling.tex
@@ -353,7 +353,7 @@ $n\gg 1$, which will be used in the next sections. The solutions for
 \eqref{SmallOscillationsTDHO} are, to first order in
 $\epsilon= \frac{2\epsilon' \nu_0}{\omega^2}$,
 \begin{equation}\label{SmallOscillationsSolution}
-f(t)=  e^{in\omega t} = e^{i\nu_0t},
+f(t)=  e^{in\omega t}  + \epsilon \frac{1}{8(n+1)} e^{i(n+2)\omega t} - \epsilon \frac{1}{8(n-1)} e^{i(n-2)\omega t}
 \end{equation} and its complex conjugate.
 
 
@@ -368,14 +368,14 @@ obtaining
 \alpha_0 =& \frac{\Omega}{2\delta-i\kappa},& \beta_0 =& 0.
 \end{align}
 The 0 sub-index denotes that the solutions are valid only to zeroth
-order in the coupling parameter. In obtaining the solution we used that
+order in the coupling parameter. In obtaining the solution we used
 \begin{equation}
 \gamma_\pm= \frac{\pm 1}{2i\nu_0}e^{\mp i\nu_0 t},
 \end{equation}
-and  $\frac{W}{|f|^2} = \nu_0$. Using \eqref{eq:alpha_beta_sta} in~(\ref{eq:hamiltonian_no_small})
+and  $\frac{W}{|f|^2} = \nu_0 + \frac{\epsilon \omega}{2n} cos(2\omega t)$. These expressions neglect terms of order $\frac{\epsilon}{n^2}$ and use the approximation $n+1 \approx n-1 \approx n$ since we work in the regime where $n >> 1$. Using \eqref{eq:alpha_beta_sta} in~(\ref{eq:hamiltonian_no_small})
 the Hamiltonian can be written as
 \begin{align}
-H =& -\hbar \delta a^{\dagger}a +\hbar\nu_0\Gamma^{\dagger}\Gamma \\
+H =& -\hbar \delta a^{\dagger}a +\hbar(\nu_0 + \frac{\epsilon \omega}{2n} cos(2\omega t))\Gamma^{\dagger}\Gamma \\
 &-\hbar g\sqrt{\frac{\hbar}{2M}}(a^{\dagger}a +\alpha_0 a^{\dagger}+\alpha^*_0 a)(\gamma_-(t)\Gamma^{\dagger}+\gamma_+(t)\Gamma)\nonumber.
 \end{align}
 We focus on the case where $|\alpha_0| \gg 1$
@@ -384,9 +384,9 @@ it is small when compared to the other two terms in the interaction.
 This leads to a further simplified Hamiltonian
 
 \begin{align} \label{LCHamiltonian}
-H(t) =& -\hbar \delta a^{\dagger}a +\hbar\nu_0\Gamma^{\dagger}\Gamma \\
-&+\hbar g\sqrt{\frac{\hbar}{2M}}(\alpha_0 a^{\dagger}+\alpha^*_0 a)(\frac{
-e^{- i\nu_0 t}}{2i\nu_0} \nonumber\Gamma^{\dagger}-\frac{e^{i\nu_0 t}}{2i\nu_0}\Gamma).
+H(t) =& -\hbar \delta a^{\dagger}a +\hbar(\nu_0 + \frac{\epsilon \omega}{2n} cos(2\omega t))\Gamma^{\dagger}\Gamma \\
+&+\hbar g\sqrt{\frac{\hbar}{2M}}(\alpha_0 a^{\dagger}+\alpha^*_0 a)(\frac{-e^{i\nu_0 t}}{2i\nu_0}\Gamma-\frac{
+e^{i\nu_0 t}}{2i\nu_0} \nonumber\Gamma^{\dagger}).
 \end{align}
 
 Finally, using that $C(t)$ is proportional to $\beta_0$, the master
@@ -460,17 +460,17 @@ up to first order in $\epsilon$~\eqref{CavityQuadrature} simplifies to
   G(\nu,0)=&\int_0^\infty dt e^{(i\nu_0 +\epsilon'\cos{(2\omega t)})t }Tr[...]\nonumber\\
            &\approx\frac{1}{2}\int_0^\infty e^{i (\nu_0+\delta)
              t}e^{-\frac{\kappa t}{2}}dt\nonumber\\
-           &+\frac{i\epsilon}{2}\int_0^\infty cos(2\omega t)t e^{i (\nu_0+\delta)
+           &+\frac{i\epsilon \omega}{4n}\int_0^\infty cos(2\omega t)t e^{i (\nu_0+\delta)
              t}e^{-\frac{\kappa t}{2}}dt\, ,\nonumber
 \end{align}
-where the $e^{-\frac{kappa}{2} t}$ factor acts as a cut-off for the integral, which
+where the $e^{-\frac{\kappa}{2} t}$ factor acts as a cut-off for the integral, which
 allows for the expansion in $\epsilon$ to be performed.See Appendix
 \ref{App1} for more on the states used to evaluate the trace and Appendix \ref{TraceAppendix} for a more detailed evaluation of the trace term. This leads
 to an expression for \eqref{CavityQuadrature} which consist of two
 parts: one corresponding to the nondriven harmonic oscillator case
 plus a correction term proportional to $\epsilon$
 \begin{equation}
-\frac{G(\nu,0)}{g'^2}= \frac{1}{-\kappa + 2i(\delta + \nu_0)} +i\epsilon\frac{(-\kappa + i(\nu_0 + \delta))^2 - 4\omega^2}{((-\kappa + i(\nu_0 + \delta))^2 + 4\omega^2)^2}\, .
+\frac{G(\nu,0)}{g'^2}= \frac{1}{-\kappa + 2i(\delta + \nu_0)} +i\epsilon\frac{\omega}{4n}\frac{(-\kappa + i(\nu_0 + \delta))^2 - 4\omega^2}{((-\kappa + i(\nu_0 + \delta))^2 + 4\omega^2)^2}\, .
 \end{equation} %where  $E_0 = g \sqrt{\frac{\hbar}{2m\nu_0}}$.
 
 We evaluate the real part of this expression numerically. In order for
@@ -554,13 +554,13 @@ In order to find the master equation
 \eqref{eq:projected_master_equation} we employed projection operators
 like those in \cite{CarmichaelQO}. We also separate the $L$ terms into
 \begin{equation}
-L_0= (\frac{1}{i\hbar}[H_{cav},\rho]+L_a) +(\frac{1}{i\hbar}[H_{mec}(t),\rho] L_\Gamma),
+L_0= (\frac{1}{i\hbar}[H_{cav},\bullet]+L_a) +(\frac{1}{i\hbar}[H_{mec}(t),\bullet]),
 \end{equation}
 
 and
 
 \begin{equation}
-L_1 = \frac{1}{i\hbar}[H_{int},\rho].
+L_1 = \frac{1}{i\hbar}[H_{int},\bullet].
 \end{equation}These projection operators fulfill a completeness
 relation
 
@@ -598,15 +598,26 @@ Q\rho =& Q\rho(t_0) + \int_{t_0}^{t}dt' QL(t')P\rho(t')\\
 P\dot{\rho}(t) =& PL_1Q\rho(t-\Delta t)\\ 
  &+ PL_1\int_{t_0}^{t}dt' QL_1(t')P\rho(t-\Delta t)\nonumber \\
  &+ PL_1\int_{t_0}^{t}dt'QL_1(t')Q\rho(t-\Delta t) \nonumber,
-\end{align} where only the last term is non zero. Transforming back from the decay picture
+\end{align} where only the second term is non zero. Transforming back from the decay picture
 
 \begin{equation}\label{ProyectionEQ}
-P e^{-L_0 t}L_1e^{L_0 t}\int_{t-\Delta t}^{t}dt'Qe^{-L_0 t}L_1e^{L_0 t}Pe^{-L_0 t}\rho(t-\Delta t).
-\end{equation} Noting that the factors that multiply the Floquet operators cancel out their time dependence and decomposing the projectors into the forms $P=\sum_\lambda = \hat{\rho}_\lambda \otimes \check{\rho}_\lambda$ and $Q=\sum_{\lambda'} = \hat{\rho}_{\lambda'} \otimes \check{\rho}_{\lambda'}$ the time integral can be evaluated to obtain
+P e^{-L_0 t}L_1e^{L_0 t}\int_{t-\Delta t}^{t}dt'Qe^{-L_0 t'}L_1e^{L_0 t'}Pe^{-L_0( t-\Delta t)}\rho(t-\Delta t).
+\end{equation} Noting that the factors that multiply the Floquet operators cancel out their time dependence and decomposing the projectors into the forms $P=\sum_\lambda \hat{\rho}_\lambda \otimes \check{\rho}_\lambda$ and $Q=\sum_{\lambda'} \hat{\rho}_{\lambda'} \otimes \check{\rho}_{\lambda'}$ we may evaluate the $L_0$ terms by applying them to the nearest states
+
+\begin{align}
+P e^{-L_0 t}L_1[&\sum_{\lambda',\lambda}\int_{t-\Delta t}^{t}dt'e^{\lambda' t} \hat{\rho}_{\lambda'} \otimes \check{\rho}_{\lambda'}e^{-\lambda' t'}L_1\\
+&e^{\lambda t'}\hat{\rho}_\lambda \otimes \check{\rho}e^{-\lambda( t-\Delta t)}\rho(t-\Delta t)]\nonumber.
+\end{align} We wish to take the limit when $\Delta t \to \infty$. In this limit
 
 \begin{equation}
-P\dot{\rho}=\sum_{\lambda ,\lambda'} P e^{-L_0 t} L_1 \rho_{\lambda} L_1 \rho_{\lambda'} \rho(t-\Delta t)\frac{1}{\lambda' - \lambda} .
-\end{equation} We multiply by $Pe^{L_0 t}$ and return the projectors to their previous notation to obtain a projected master equation.
+e^{\lambda' \Delta t} \to 1, \qquad \qquad e^{\lambda \Delta t} \to 0.
+\end{equation} This is because $\lambda'$ represents the slow time scale and $\lambda$ represents the fast time scale. Only the stationary sttes survive as all other eigenvalues have a negative real part.  We multiply both sides by $Pe^{L_0 t}$ remembering that $P^2 = P$ We then trace over the cavity degrees of freedom. As has already been noted, the Floquet operators can leave the integral and also leave the trace. We assume that the initial condition can be expressed as a separable state $\rho = \rho_m \otimes \rho_st$ and only $\rho_st$ must remain within the trace. Using $\mu=Tr_a[P\rho]$ we arrive at the equation
+
+\begin{equation}
+\dot{mu} = (L_1)_{\Gamma}(L_1)_{\Gamma}\mu \int_0^{\infty} e^{i\nu(t)t} Tr_a[(L_1)_a e^{L_at}(L_1)_a\rho_{st}],
+\end{equation} which then leads directly to \eqref{eq:projected_master_equation}.
+
+
 
 
 
